--- a/app/App_Resources/Android/settings.json
+++ b/app/App_Resources/Android/settings.json
@@ -1,1 +1,1 @@
-{"appId":"org.nativescript.TestSimpleApp","minSdkVersion":null,"targetSdkVersion":null}
+{"appId":"org.nativescript.VueMasterDetail","minSdkVersion":null,"targetSdkVersion":null}
