--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "org.nativescript.TestSimpleApp",
+    "id": "org.nativescript.VueMasterDetail",
     "tns-android": {
       "version": "4.1.2"
     }
   },
   "dependencies": {
+    "nativescript-imagepicker": "^6.0.2",
+    "nativescript-plugin-firebase": "^6.1.1",
     "nativescript-theme-core": "~1.0.4",
+    "nativescript-ui-listview": "^3.5.7",
     "nativescript-vue": "^1.3.1",
     "tns-core-modules": "4.1.0",
     "vue-router": "^3.0.1"
@@ -44,7 +47,6 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "~3.10.0",
     "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-cli": "~2.1.3",
     "webpack-sources": "~1.1.0",
     "winston-color": "^1.0.0",
     "resolve-url-loader": "~2.2.1"
