--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "nativescript-plugin-firebase": "^6.1.1",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-listview": "^3.5.7",
-    "nativescript-vue": "^1.3.1",
+    "nativescript-vue": "file:../nativescript-vue/",
     "tns-core-modules": "4.1.0",
     "vue-router": "^3.0.1"
   },
@@ -44,6 +44,7 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "uglifyjs-webpack-plugin": "~1.1.6",
+    "vue": "^2.5.16",
     "vue-template-compiler": "^2.5.16",
     "webpack": "~3.10.0",
     "webpack-bundle-analyzer": "^2.9.1",
