--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   "nativescript": {
     "id": "org.nativescript.VueMasterDetail",
     "tns-android": {
-      "version": "4.1.2"
+      "version": "4.1.3"
     }
   },
   "dependencies": {
     "nativescript-imagepicker": "^6.0.2",
     "nativescript-plugin-firebase": "^6.1.1",
-    "nativescript-theme-core": "~1.0.4",
-    "nativescript-ui-listview": "^3.5.7",
+    "nativescript-theme-core": "^1.0.4",
+    "nativescript-ui-listview": "^3.5.8",
     "nativescript-vue": "file:../nativescript-vue/",
-    "tns-core-modules": "4.1.0",
+    "tns-core-modules": "^4.1.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
