--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "nativescript-ui-listview": "^3.5.8",
     "nativescript-vue": "file:../nativescript-vue/",
     "tns-core-modules": "^4.1.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "file:../vue-router/"
   },
   "devDependencies": {
     "babel-traverse": "6.26.0",
