--- a/package.json
+++ b/package.json
@@ -7,49 +7,43 @@
   "repository": "<fill-your-repository-here>",
   "nativescript": {
     "id": "org.nativescript.VueMasterDetail",
+    "tns-ios": {
+      "version": "4.2.0"
+    },
     "tns-android": {
       "version": "4.2.0"
     }
   },
   "dependencies": {
-    "nativescript-imagepicker": "^6.0.2",
-    "nativescript-plugin-firebase": "^6.1.1",
+    "nativescript-imagepicker": "^6.0.3",
+    "nativescript-plugin-firebase": "^6.7.0",
     "nativescript-theme-core": "^1.0.4",
-    "nativescript-ui-listview": "^3.5.8",
+    "nativescript-ui-listview": "^3.6.1",
     "nativescript-vue": "file:../nativescript-vue/",
     "tns-core-modules": "^4.2.0",
     "vue-router": "file:../vue-router/"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-loader": "^8.0.2",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "babylon": "6.18.0",
-    "clean-webpack-plugin": "~0.1.19",
-    "copy-webpack-plugin": "~4.3.0",
-    "cross-env": "5.1.6",
-    "css-loader": "~0.28.7",
-    "extract-text-webpack-plugin": "~3.0.2",
-    "fs-extra": "^5.0.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
     "lazy": "1.0.11",
-    "nativescript-dev-webpack": "~0.11.0",
-    "nativescript-vue-externals": "^0.2.0",
-    "nativescript-vue-loader": "^0.1.5",
-    "nativescript-vue-target": "^0.1.0",
-    "nativescript-vue-template-compiler": "^1.3.1",
-    "nativescript-worker-loader": "~0.8.1",
-    "node-sass": "^4.7.2",
-    "ns-vue-loader": "^0.1.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "raw-loader": "~0.5.1",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.7",
-    "uglifyjs-webpack-plugin": "~1.1.6",
-    "vue": "^2.5.17",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "~3.10.0",
-    "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-sources": "~1.1.0",
-    "winston-color": "^1.0.0",
-    "resolve-url-loader": "~2.2.1"
+    "mini-css-extract-plugin": "^0.4.1",
+    "nativescript-dev-webpack": "^0.16.0",
+    "nativescript-vue-template-compiler": "^2.0.0-alpha.2",
+    "nativescript-worker-loader": "~0.9.1",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "~1.3.0",
+    "vue-loader": "^15.4.2",
+    "webpack": "^4.18.0",
+    "webpack-bundle-analyzer": "~3.0.1",
+    "webpack-cli": "^3.1.0"
   }
 }
