Add HMR support Remove vendor files Remove Babel Make the Selector partially work

--- a/package.json
+++ b/package.json
@@ -24,18 +24,13 @@
     "vue-router": "file:../vue-router/"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-loader": "^8.0.2",
-    "babel-traverse": "6.26.0",
-    "babel-types": "6.26.0",
-    "babylon": "6.18.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
+    "css-hot-loader": "^1.4.2",
     "lazy": "1.0.11",
     "mini-css-extract-plugin": "^0.4.1",
-    "nativescript-dev-webpack": "^0.16.0",
+    "nativescript-dev-webpack": "^0.17.0-2018-09-11-02",
     "nativescript-vue-template-compiler": "^2.0.0-alpha.2",
     "nativescript-worker-loader": "~0.9.1",
     "node-sass": "^4.9.3",
